--- a/atividade-seguranca.html
+++ b/atividade-seguranca.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>segurança da informação</title>
+    <title>Document</title>
 </head>
 <body>
+    
     <h1>Insera seu nome</h1>
-<input type="text" id="nameInput"
-<button> onclick="displayname()">Coloque aqui</button>
-</body>
+    <!-- Dentro do h1, eu irei colocar o tema principal-->
+    <input type="text" id="nameInput" />
+    <!-- Input serve como um campo onde um usuário possa inserir algum texto-->
+    <button onclick="displayName()">coloque aqui</button>
+    <!--Button é inserir um botão onde o usuário irá aperta-lo na página-->
+    <p id="nameOutput"></p>  
+<!--Parágrafo-->
+<script>
+         function displayName() {
+             var name = document.getElementById("nameInput").value;
+// conteudo que aparecerá depois de apertar o botão
+            document.getElementById("nameOutput").innerHTML = "Seja muito bem vindo ao site, " + name + "acesse o app para mais informações";
+        }
+   </script>
+  </body>
 </html>
